tests/errors/sem_test_1.py
# sem_test1.py
def main():
    x = "hello"
    y = 5
    z = x * y
    print(z)

main()
